fix(font-color): add more contrast for accesibility

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 .theme-light {
   --background-primary: #ffffff;
   --background-secondary: #2c5282;
-  --font-primary: #2d3748;
+  --font-primary: #000000;
   --font-secondary: #2c5282;
   --font-ternary: #4a5568;
   --background-accent: #e2e8f0;
